@@ -21,3 +21,4 @@ parts
 scripts/passwords.py
 var
 src/collective.mailchimp
+src/eea.facetednavigation
