@@ -51,6 +51,9 @@ plone_push = git@github.com:plone
 [sources]
 Products.PortalTransforms = git ${remotes:plone}/Products.PortalTransforms.git pushurl=${remotes:plone_push}/Products.PortalTransforms.git branch=maurits-subprocess
 collective.mailchimp = git https://github.com/collective/collective.mailchimp.git pushurl=git@github.com:collective/collective.mailchimp.git branch=master
+# We need a faceted checkout for MINA-98.
+# See pull request https://github.com/eea/eea.facetednavigation/pull/81
+eea.facetednavigation = git https://github.com/collective/eea.facetednavigation.git pushurl=git@github.com:collective/eea.facetednavigation.git branch=zest-default-from-request
 
 [env]
 recipe = gocept.recipe.env
