@@ -150,7 +150,7 @@
               </button>
 
               <div class="search">
-                <form class="form-inline">
+                <form class="form-inline" action="/documenten">
                     <div class = "input-group">
                        <label class="sr-only" for="search">Zoekterm</label>
                        <input type = "text" class = "form-control">
