@@ -3,6 +3,12 @@ History of this buildout
 
 6.0.0 (unreleased)
 ------------------
+
+- Let the search box point to /documenten in the theme.  Fixes MINA-98.
+  Doing a checkout of the zest-default-from-request branch from eea.facetednavigation.
+  See pull request https://github.com/eea/eea.facetednavigation/pull/81
+  [maurits]
+
 - Body text on the homepage will now be displayed as a hearing event
   on the front page.
   [diederik]
